Integracion del nombre del nuevo integrante del grupo , arreglo del lag de la intefaz (Falta remplazar el wallpaper de megaman

--- a/PrimerTrabajo/app/src/main/res/values/strings.xml
+++ b/PrimerTrabajo/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="Universidad">Universidad Nacional de Colombia</string>
     <string name="NombreDeLaSede">Sede Medellin</string>
     <string name="Curso">IRI-16</string>
+    <string name="NombreEsteban">Esteban Suarez Restrepo</string>
 </resources>
